Misc-UI-Alignment-Fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -14019,6 +14019,7 @@ a.ui-button:active,
   margin: 0;
   letter-spacing: 0.03em;
   text-transform: capitalize;
+  cursor: pointer;
 }
 
 .page--job-details .meta {
